# hybridLIM

./: .gitignore  .pre-commit-config.yaml  README.md  paper.mplstyle  pyproject.toml
data/: .gitkeep
hyblim/: __init__.py  geoplot.py  losses.py
hyblim/data/: dataloader.py  eof.py  preproc.py
hyblim/model/: convlstm.py  lim.py  lstm.py  modules.py
hyblim/utils/: enso.py  eval.py  metric.py  stats.py
plots/: .gitkeep
scripts/convlstm/: eval_convlstm.py  helpers_contextcast.py  train_convlstm.py
scripts/create_datasets/: create_cesm2-picontrol.py  create_oras5_dataset.py  pca_to_file.py
scripts/lim/: ensemble_hindcast.py  eval_lim_hindcast.py  lim_fit.ipynb
scripts/lim_lstm/: eval_limlstm.py  train_limlstm.py
scripts/limlstm/: eval_limlstm.py  train_limlstm.py
scripts/lstm/: eval_lstm.py  train_lstm.py
scripts/persistence/: eval_persistence.ipynb
scripts/plotting/: experiments.yaml  fig01_skill_ntrain.ipynb  fig_compare_nino.ipynb  fig_project_optimals.ipynb  fig_scores_map.ipynb  fig_skill_ntrain.ipynb  helpers.py  lim_spread_skill.ipynb  map_scores.ipynb  nino_scores.ipynb  rename_files.ipynb  seas5.ipynb  seas5_analysis.ipynb  spread_skill.ipynb
